# FloLang1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FLO_SPEC.md  IMPLEMENTATION.md  README.md  pyproject.toml
grammar/: flo.lark
samples/: README.md  demo.flo  hello.flo
src/flo_lang/ast/: __init__.py  nodes.py
src/flo_lang/cli/: __init__.py  flo.py  flod.py  florepl.py  mn.py
src/flo_lang/interpreter/: __init__.py  environment.py  evaluator.py
src/flo_lang/mnstor/: __init__.py  storage.py
src/flo_lang/parser/: parser.py
src/flo_lang/std/: __init__.py
src/flo_lang/std/ai/: __init__.py  client.py
src/flo_lang/std/auth/: __init__.py  auth.py
src/flo_lang/std/crypto/: __init__.py  primitives.py
src/flo_lang/std/db/: __init__.py  database.py
src/flo_lang/std/email/: __init__.py  mailer.py
src/flo_lang/std/http/: __init__.py  server.py
tests/: test_interpreter.py  test_parser.py
