[tool.poetry]
name = "flo-lang"
version = "0.1.0"
description = "Flo programming language prototype - A capability-based async language"
authors = ["Foundation INC Corporate Team"]
readme = "README.md"
packages = [{include = "flo_lang", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.9"
typer = "^0.9.0"
prompt-toolkit = "^3.0.43"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
asyncpg = "^0.29.0"
aiomysql = "^0.2.0"
motor = "^3.3.2"
cryptography = "^42.0.0"
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"
httpx = "^0.26.0"
pydantic = "^2.5.3"
aiosmtpd = "^1.4.4"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
types-pyjwt = "^1.7.1"

[tool.poetry.scripts]
flo = "flo_lang.cli.flo:app"
florepl = "flo_lang.cli.florepl:main"
mn = "flo_lang.cli.mn:app"
flod = "flo_lang.cli.flod:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/flo_lang --cov-report=html --cov-report=term"
